--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.0",
     "react-scripts": "5.0.0",
     "roughjs": "^4.5.2",
+    "use-sound": "^4.0.1",
     "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
